k8s/vault/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    kubernetes.io/metadata.name: vault
  name: vault
